feat(api): Update all files to move queries/mutations.
Moves all queries and mutations to respective type files. Creates payloads, inputs, and types. Adds
addProduct endpoint.

--- a/api/prisma/prisma.yml
+++ b/api/prisma/prisma.yml
@@ -16,4 +16,5 @@ hooks:
 seed:
   run: npx ts-node ./prisma/seed.ts
 
-endpoint: https://us1.prisma.sh/syllabus/syllabus-api/dev
+# endpoint: https://us1.prisma.sh/syllabus/syllabus-api/dev
+endpoint: http://localhost:4466/
