--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -7,6 +7,7 @@
   ],
   "rules": {
     "indent": "off",
-    "@typescript-eslint/indent": "off"
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
