--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,7 @@
     "graphql-middleware-sentry": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "node-mailjet": "^3.3.1",
-    "prisma-client-lib": "^1.30.0",
+    "stripe": "^6.28.0",
     "uuid": "^3.3.2",
     "yoga": "^0.0.18",
     "yup": "^0.27.0"
@@ -46,6 +46,7 @@
     "@types/graphql": "^14.0.4",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^11.11.6",
+    "@types/stripe": "^6.25.9",
     "@types/uuid": "^3.4.4",
     "@types/ws": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
@@ -59,7 +60,7 @@
     "is-ci-cli": "^1.1.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
-    "prisma": "^1.29.2",
+    "prisma": "1.29.2",
     "semantic-release": "^15.13.3",
     "typescript": "^3.4.1"
   },
