--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "graphql": "14.2.0",
+    "graphql": "^14.2.1",
     "@graphql-codegen/cli": "^1.0.6",
     "@graphql-codegen/fragment-matcher": "^1.0.6",
     "@graphql-codegen/introspection": "^1.0.6",
