--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "build": "yoga build",
     "build:ci": "npx nexus-prisma-generate --output ./.yoga/nexus-prisma && yarn prisma generate && yoga build",
     "commit": "git-cz",
+    "deploy": "npm run build && now",
     "dev": "yoga dev",
     "eject": "yoga eject",
     "format": "yarn prettier --write",
@@ -27,11 +28,13 @@
     "@sentry/node": "^4.5.0",
     "apollo-errors": "^1.9.0",
     "bcrypt": "^3.0.5",
-    "graphql": "^14.2.1",
+    "graphql": "^14.1.1",
     "graphql-middleware": "^3.0.2",
     "graphql-middleware-sentry": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "node-mailjet": "^3.3.1",
+    "now": "^15.0.3",
+    "prisma-client-lib": "^1.29.1",
     "stripe": "^6.28.0",
     "uuid": "^3.3.2",
     "yoga": "^0.0.18",
@@ -60,9 +63,10 @@
     "is-ci-cli": "^1.1.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
-    "prisma": "1.29.2",
+    "prisma": "^1.29.1",
     "semantic-release": "^15.13.3",
-    "typescript": "^3.4.1"
+    "ts-node": "^8.0.3",
+    "typescript": "3.2.2"
   },
   "husky": {
     "hooks": {
