--- a/api/prisma/docker-compose.yml
+++ b/api/prisma/docker-compose.yml
@@ -8,17 +8,22 @@ services:
     environment:
       PRISMA_CONFIG: |
         port: 4466
+        # uncomment the next line and provide the env var PRISMA_MANAGMENT_API_SECRET=my-secret to activate cluster security
+        # managementApiSecret: my-secret
         databases:
           default:
             connector: postgres
             host: postgres
-            port: 5432
             user: prisma
             password: prisma
+            rawAccess: true
+            port: 5432
             migrations: true
   postgres:
-    image: postgres:10.3
+    image: postgres
     restart: always
+    ports:
+      - '5432:5432'
     environment:
       POSTGRES_USER: prisma
       POSTGRES_PASSWORD: prisma
