--- a/api/prisma/prisma.yml
+++ b/api/prisma/prisma.yml
@@ -1,20 +1,17 @@
-# Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
 
-# Specifies the language and directory for the generated Prisma client.
-generate:
-  - generator: typescript-client
-    output: ../.yoga/prisma-client/
+# endpoint: https://us1.prisma.sh/syllabus/syllabus-api/dev
+# endpoint: http://localhost:4466/
+endpoint: ${env:PRISMA_ENDPOINT}
 
-# Ensures Prisma client is re-generated after a datamodel change.
 hooks:
   post-deploy:
     - prisma generate
     - npx nexus-prisma-generate --output ./.yoga/nexus-prisma
 
-# Seeds initial data into the database by running a script.
-seed:
-  run: npx ts-node ./prisma/seed.ts
+generate:
+  - generator: typescript-client
+    output: ../.yoga/prisma-client/
 
-# endpoint: https://us1.prisma.sh/syllabus/syllabus-api/dev
-endpoint: http://localhost:4466/
+seed:
+  run: yarn ts-node prisma/seed.ts
