--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "es5",
-    "rootDir": ".",
-    "outDir": "dist",
-    "lib": ["es2015", "esnext.asynciterable", "es2017", "dom"],
-    "noUnusedLocals": true,
-    "noUnusedParameters": false,
-    "skipLibCheck": true,
+    "lib": ["dom", "esnext", "esnext.asynciterable"],
     "sourceMap": true,
-    "strict": false
+    "rootDir": "./",
+    "outDir": "dist",
+    "strict": true,
+    "skipLibCheck": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true
+    // "module": "commonjs",
+    // "moduleResolution": "node",
+    // "target": "es5",
   },
-  "include": ["./src/**/*.ts", ".yoga/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["./.yoga/**/*.ts", "./src/**/*.ts", "prisma/seed.ts"],
+  "exclude": ["node_modules", "generated", "example", "examples", "scripts"]
 }
