chore(server): Setup now.sh for API and app

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,7 @@
-PRISMA_SECRET=
-APP_SECRET=
+PRISMA_SECRET=value
+APP_SECRET=value
 
-MJ_APIKEY_PUBLIC=
-MJ_APIKEY_PRIVATE=
+MJ_APIKEY_PUBLIC=value
+MJ_APIKEY_PRIVATE=value
 
-SENTRY_DSN=
+STRIPE_TEST_PRIVATE_KEY=value
