--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "build": "yoga build",
     "build:ci": "npx nexus-prisma-generate --output ./.yoga/nexus-prisma && yarn prisma generate && yoga build",
-    "commit": "git-cz",
-    "deploy": "npm run build && now",
     "dev": "yoga dev",
     "eject": "yoga eject",
     "format": "yarn prettier --write",
@@ -14,7 +12,6 @@
     "lint:fix": "yarn lint --fix --format verbose",
     "playground": "graphql playground",
     "prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
-    "semantic-release": "semantic-release",
     "setup": "yarn && yarn start",
     "start": "yoga start",
     "scaffold": "yoga scaffold",
@@ -25,82 +22,65 @@
     "validate": "lint-staged"
   },
   "dependencies": {
-    "@sentry/node": "^4.5.0",
     "apollo-errors": "^1.9.0",
     "bcrypt": "^3.0.5",
-    "graphql": "^14.1.1",
-    "graphql-middleware": "^3.0.2",
-    "graphql-middleware-sentry": "^3.1.1",
+    "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "node-mailjet": "^3.3.1",
-    "now": "^15.0.3",
-    "prisma-client-lib": "^1.29.1",
     "stripe": "^6.28.0",
     "uuid": "^3.3.2",
-    "yoga": "^0.0.18",
+    "yoga": "^0.0.20",
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^6.1.0",
-    "@semantic-release/github": "^5.2.10",
-    "@semantic-release/npm": "^5.1.4",
-    "@semantic-release/release-notes-generator": "^7.1.4",
+    "@graphql-codegen/cli": "^1.0.6",
+    "@graphql-codegen/fragment-matcher": "^1.0.6",
+    "@graphql-codegen/introspection": "^1.0.6",
+    "@graphql-codegen/typescript": "^1.0.6",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.0.6",
+    "@graphql-codegen/typescript-operations": "^1.0.6",
+    "@graphql-codegen/typescript-react-apollo": "^1.0.6",
     "@types/bcrypt": "^3.0.0",
     "@types/graphql": "^14.0.4",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/node": "^11.11.6",
+    "@types/node": "^10.12.11",
     "@types/stripe": "^6.25.9",
     "@types/uuid": "^3.4.4",
     "@types/ws": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
-    "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "graphql": "^14.2.1",
     "husky": "^1.3.1",
     "is-ci-cli": "^1.1.1",
     "lint-staged": "^8.1.5",
+    "nexus": "^0.11.7",
     "prettier": "^1.16.4",
     "prisma": "^1.29.1",
-    "semantic-release": "^15.13.3",
     "ts-node": "^8.0.3",
-    "typescript": "3.2.2"
+    "typescript": "^3.2.1"
   },
   "husky": {
     "hooks": {
       "pre-commit": "yarn validate"
     }
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "repository": {
     "type": "git",
-    "url": ""
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ]
-    ]
+    "url": "https://github.com/syllabusapp/syllabus"
   },
   "lint-staged": {
     "**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)": [
       "prettier --write",
       "git add"
     ]
+  },
+  "prettier": {
+    "jsxSingleQuote": true,
+    "proseWrap": "always",
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
