--- a/app/package.json
+++ b/app/package.json
@@ -75,6 +75,7 @@
     "@storybook/react": "^5.0.6",
     "@types/i18next": "^12.1.0",
     "@types/jest": "^24.0.11",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^11.13.0",
     "@types/reach__router": "^1.2.3",
