Tweak cache-controls.

--- a/now.json
+++ b/now.json
@@ -26,16 +26,61 @@
     }
   ],
   "routes": [
-    { "src": "/graphql/(.*)", "dest": "api/dist/src/index.js" },
     {
       "src": "/static/(.*)",
       "headers": { "cache-control": "s-maxage=31536000,immutable" },
       "dest": "app/static/$1"
     },
-    { "src": "/favicon.ico", "dest": "app/favicon.ico" },
-    { "src": "/asset-manifest.json", "dest": "app/asset-manifest.json" },
-    { "src": "/manifest.json", "dest": "app/manifest.json" },
-    { "src": "/precache-manifest.(.*)", "dest": "app/precache-manifest.$1" },
+    {
+      "src": "/icons/(.*)",
+      "headers": { "cache-control": "s-maxage=31536000,immutable" },
+      "dest": "app/icons/$1"
+    },
+    {
+      "src": "/locales/(.*)",
+      "headers": { "cache-control": "s-maxage=0" },
+      "dest": "app/locales/$1"
+    },
+    {
+      "src": "/asset-manifest.json",
+      "headers": { "cache-control": "s-maxage=0" },
+      "dest": "app/asset-manifest.json"
+    },
+    {
+      "src": "/browserconfig.xml",
+      "headers": { "cache-control": "s-maxage=0" },
+      "dest": "app/browserconfig.xml"
+    },
+    {
+      "src": "/favicon.ico",
+      "headers": { "cache-control": "s-maxage=31536000,immutable" },
+      "dest": "app/favicon.ico"
+    },
+    {
+      "src": "/logo.jpg",
+      "headers": { "cache-control": "s-maxage=31536000,immutable" },
+      "dest": "app/logo.jpg"
+    },
+    {
+      "src": "/manifest.json",
+      "headers": { "cache-control": "s-maxage=0" },
+      "dest": "app/manifest.json"
+    },
+    {
+      "src": "/precache-manifest.(.*)",
+      "headers": { "cache-control": "s-maxage=0" },
+      "dest": "app/precache-manifest.$1"
+    },
+    {
+      "src": "/robots.txt",
+      "headers": { "cache-control": "s-maxage=31536000,immutable" },
+      "dest": "app/robots.txt"
+    },
+    {
+      "src": "/safari-pinned-tab.svg",
+      "headers": { "cache-control": "s-maxage=31536000,immutable" },
+      "dest": "app/safari-pinned-tab.svg"
+    },
     {
       "src": "/service-worker.js",
       "headers": { "cache-control": "s-maxage=0" },
@@ -45,6 +90,7 @@
       "src": "/(.*)",
       "headers": { "cache-control": "s-maxage=0" },
       "dest": "app/index.html"
-    }
+    },
+    { "src": "/graphql(.*)", "dest": "api/dist/src/index.js" }
   ]
 }
